<resources>
    <string name="app_name">Draw &amp; Dice</string>
    <string name="main_menu_text">"Draw \u0026 Dice"</string>
    <string name="cards_button">Cards</string>
    <string name="dice_button">Dice</string>
    <string name="coin_button">Coin</string>
    <string name="about_button">About</string>
    <string name="questionmark">\?</string>
    <string name="deckAmountText">Amount of decks used</string>
    <string name="jokers">Jokers</string>
    <string name="returnretain">Return card to deck</string>
    <string name="diceAmountText">Amount of dice</string>
    <string name="typeOfDice">Type of dice</string>
    <string name="about">DRAW \u0026 DICE\n\nVERSION 1.01\nVILLE HEIKKINEN\nVILLE SIIKALUOMA\n\nKÄYTTÖLIITTYMÄOHJELMOINTI 2016</string>
    <string name="settings">Settings</string>
    <string name="appPref">applicationPreferences</string>
    <string name="refreshButtonText">Reshuffle pack</string>
    <string name="ok">OK</string>
    <string name="deckAmountTip">Choose the number of decks used. Decks are standard 52-card decks.\nMinimum deck amount: 1\nMaximum deck amount: 5</string>
    <string name="jokersTip">Choose if to include jokers. Each deck used has two jokers. E.g. when using two decks there will be 4 jokers total.</string>
    <string name="returnTip">Choose if to return or retain the drawn card. If you choose to return the card, it is put to a random place in the deck. Retained cards are removed from the deck.</string>
    <string name="diceAmountTip">Choose the number of die used. All the die will be of the same type.\nMinimum number of die: 1\nMaximum number of die: 10</string>
    <string name="diceTypeTip">Choose the type of die used. All the die will be of the same type. Standard dice type (4, 6, 8, 10, 12, 20) are available.</string>
</resources>
