<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/main_menu_text"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <Button
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="10dp"
        android:text="@string/cards_button"
        />
    <Button
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/dice_button"
        />
    <Button
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:text="@string/coin_button"
        />
    <Button
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:text="@string/about_button"
        />
</LinearLayout>