<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <TextView
            style="@style/questionMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_diceAmount"
            android:clickable="true"
            android:text="@string/questionmark"
            />

        <TextView
            style="@style/infoText"
            android:id="@+id/text_deck_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diceAmountText"

            />

        <NumberPicker
            android:id="@+id/deckChooser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:layout_marginLeft="55dp"
            >
        </NumberPicker>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:weightSum="1">

        <TextView
            style="@style/questionMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/info_diceType"
            android:clickable="true"
            android:text="@string/questionmark"

            />

        <TextView
            style="@style/infoText"
            android:id="@+id/text_typeOfDice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeOfDice"
            />


        <NumberPicker
            android:id="@+id/diceTypeChooser"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            >
        </NumberPicker>
    </LinearLayout>

</LinearLayout>